--- a/etc/otel-collector-config.yaml
+++ b/etc/otel-collector-config.yaml
@@ -39,9 +39,9 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [spanmetrics, otlp]
+      exporters: [otlp,spanmetrics]
     metrics/spanmetrics:
-      receivers: [spanmetrics]
+      receivers: [otlp,spanmetrics]
       processors: [batch]
       exporters: [prometheus]
     logs:
