--- a/grafana/provisioning/datasources/tempo.yml
+++ b/grafana/provisioning/datasources/tempo.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 datasources:
 - name: Tempo
   type: tempo
-  # uid: tempo
+  uid: tempo
   access: proxy
   orgId: 1
   apiVersion: 1
