--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -453,10 +453,15 @@ services:
     container_name: postgres_demo
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+      - ./etc/postgres/init:/docker-entrypoint-initdb.d  # Mount initialization script
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    command: 
+      - "postgres"
+      - "-c" 
+      - "shared_preload_libraries=pg_stat_statements"  # Load extension at startup
     networks:
       serversage-network:
         aliases:
